--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,8 @@
 ---
-import ReactHeader from "../components/Header";
-import ReactFooter from "../components/Footer";
+import ReactHeader from "../components/header/Header";
+import ReactFooter from "../components/footer/Footer";
 import "../styles/global.css";
-import "../components/footer.css";
+import "../components/footer/footer.css";
 export interface Props {
   pageTitle?: string;
   title?: string;
