--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -1,9 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import PageTitle from "../components/PageTitle";
-import PageContainer from "../components/PageContainer";
-import "../components/page-title.css";
-import "../components/page-container.css";
+import PageTitle from "../components/page/PageTitle";
+import PageContainer from "../components/page/PageContainer";
+import "../components/page/page-title.css";
+import "../components/page/page-container.css";
 ---
 
 <Layout title="Works">
