--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,16 +1,16 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import PageTitle from "../components/PageTitle";
-import PageContainer from "../components/PageContainer";
-import Card, { CardHeader } from "../components/Card";
-import SnsLinks from "../components/SnsLinks";
+import PageTitle from "../components/page/PageTitle";
+import PageContainer from "../components/page/PageContainer";
+import Card, { CardHeader } from "../components/card/Card";
+import SnsLinks from "../components/footer/SnsLinks";
 import { aboutData } from "../data/about";
 import { organizations } from "../data/organizations";
 import { qualifications } from "../data/qualifications";
-import "../components/page-title.css";
-import "../components/page-container.css";
-import "../components/card.css";
-import "../components/sns-links.css";
+import "../components/page/page-title.css";
+import "../components/page/page-container.css";
+import "../components/card/card.css";
+import "../components/footer/sns-links.css";
 ---
 
 <Layout title="About">
